[package]
name = "executor-macros"
version = "0.0.1"
authors = ["Richard Anaya"]
edition = "2018"
description = "Macros for executor"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[features]

[dependencies]
proc-macro2 = "1.0.7"
quote = "1"
syn = { version = "1.0.3", features = ["full"] }
