[package]
name = "example"
version = "0.1.0"
authors = ["Richard <Richard>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js = "0"
web = "0"
executor = {path="../../"}

[lib]
crate-type =["cdylib"]

[profile.release]
lto = true