[package]
name = "example"
version = "0.1.0"
authors = ["richard <richard>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
executor = {path="../../"}
async-std = "1"
complete = "0.0.1"

[profile.release]
opt-level = 'z' 
