[package]
name = "example"
version = "0.1.0"
authors = ["richard <richard>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.2.0"
spin = "0.5.2"
executor = {path="../../"}
js_ffi = "0.6"

[lib]
crate-type =["cdylib"]

[profile.release]
lto = true
opt-level = 's'